--- a/ToDo
+++ b/ToDo
@@ -1,2 +1,3 @@
-- error handling <br>
+- error handling
 - proper logic (current it attemps to display money amount even if process handle not found)
+- maybe do something about the run as administrator? 
